--- a/SquidGameGalssMoreAppe.json
+++ b/SquidGameGalssMoreAppe.json
@@ -1,22 +1,22 @@
 [
    {
-       "Name":"Sqwuid Game",
-       "Description":"Discription",
-       "IconUrl":"https://raw.githubusercontent.com/FBGDFB/Tp38/master/Swap/1.jpg",
-       "GameUrl":"https://raw.githubusercontent.com/FBGDFB/Tp38/master/Swap/1.jpg"
+       "Name":"Squid Game Rublox",
+       "Description":"Can you survive from games? /n Red Light Green Light!",
+       "IconUrl":"https://play-lh.googleusercontent.com/MvbZDIWVwWWm-FHrxZcsGvSWbyHbmDAYGTwbEJ4mwvAWdF6byBc7TtO3sEGsj9-7pQ=s180-rw",
+       "GameUrl":"https://play.google.com/store/apps/details?id=com.YaznGame.SquidGameRublox3D2021"
    },
 
    {
-       "Name":"Sqwuid Game 2",
-       "Description":"Sqwuid Game 2",
+       "Name":"Squid Game 456",
+       "Description":"There is only one rule,/n don’t get eliminated /n Don't move in front of the doll",
        "IconUrl":"https://raw.githubusercontent.com/FBGDFB/Tp38/master/Swap/2.jpg",
-       "GameUrl":"https://raw.githubusercontent.com/FBGDFB/Tp38/master/Swap/2.jpg"
+       "GameUrl":"https://play.google.com/store/apps/details?id=com.YaznGame.dollwatchingSquidGameheros3D"
    },
 
    {
-       "Name":"Sqwuid Game 3",
-       "Description":"Sqwuid Game 3",
+       "Name":"Stickman",
+       "Description":"The best Red and Blue stickman and Spider",
        "IconUrl":"https://raw.githubusercontent.com/FBGDFB/Tp38/master/Swap/3.jpg",
-       "GameUrl":"https://raw.githubusercontent.com/FBGDFB/Tp38/master/Swap/3.jpg"
+       "GameUrl":"https://play.google.com/store/apps/details?id=com.stickmanRedAndBlueAdventure.SpiderRedAndMsrBlueParkourGame"
    }
 ]
