--- a/SquidGameGalssMoreAppe.json
+++ b/SquidGameGalssMoreAppe.json
@@ -2,21 +2,21 @@
    {
        "Name":"Squid Game Rublox",
        "Description":"Can you survive from games? /n Red Light Green Light!",
-       "IconUrl":"https://play-lh.googleusercontent.com/MvbZDIWVwWWm-FHrxZcsGvSWbyHbmDAYGTwbEJ4mwvAWdF6byBc7TtO3sEGsj9-7pQ=s180-rw",
+       "IconUrl":"https://raw.githubusercontent.com/FBGDFB/Sqyuid-Game/main/More%20APPE/SquidGame1.jpg",
        "GameUrl":"https://play.google.com/store/apps/details?id=com.YaznGame.SquidGameRublox3D2021"
    },
 
    {
        "Name":"Squid Game 456",
        "Description":"There is only one rule,/n don’t get eliminated /n Don't move in front of the doll",
-       "IconUrl":"https://raw.githubusercontent.com/FBGDFB/Tp38/master/Swap/2.jpg",
+       "IconUrl":"https://raw.githubusercontent.com/FBGDFB/Sqyuid-Game/main/More%20APPE/SquidGame2.jpg",
        "GameUrl":"https://play.google.com/store/apps/details?id=com.YaznGame.dollwatchingSquidGameheros3D"
    },
 
    {
        "Name":"Stickman",
        "Description":"The best Red and Blue stickman and Spider",
-       "IconUrl":"https://raw.githubusercontent.com/FBGDFB/Tp38/master/Swap/3.jpg",
+       "IconUrl":"https://raw.githubusercontent.com/FBGDFB/Sqyuid-Game/main/More%20APPE/Stickman.jpg",
        "GameUrl":"https://play.google.com/store/apps/details?id=com.stickmanRedAndBlueAdventure.SpiderRedAndMsrBlueParkourGame"
    }
 ]
