--- a/SquidGameGalssMoreAppe.json
+++ b/SquidGameGalssMoreAppe.json
@@ -3,7 +3,7 @@
        "Name":"Squid Game Rublox",
        "Description":"Can you survive from games? /n Red Light Green Light!",
        "IconUrl":"https://raw.githubusercontent.com/FBGDFB/Sqyuid-Game/main/More%20APPE/SquidGame1.jpg",
-       "GameUrl":"https://play.google.com/store/apps/details?id=com.YaznGame.SquidGameRublox3D2021"
+       "GameUrl":"market://details?id=com.example.android"
    },
 
    {
